[package]
name = "sabbatical"
version = "0.42.0+0"
edition = "2021"

description = "Sabbatical!"
homepage = "https://github.com/asaaki/sabbatical"
repository = "https://github.com/asaaki/sabbatical"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://fasterthanli.me/articles/why-is-my-rust-build-so-slow
[profile.release]
opt-level = 3
codegen-units = 1
lto = true
incremental = true
strip = true

[dependencies]
